Use vex.js for the hotkeys modal. It's cleaner.

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/vex/vex.css">
+    <link rel="stylesheet" href="/styles/vex/vex-theme-top.css">
 
     <link rel="SHORTCUT ICON" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/img/roost-logo_57x57.png">
@@ -39,6 +41,11 @@
     <script src="/scripts/mousetrap-pause.min.js"></script>
     <script src="/scripts/typeahead.jquery.min.js"></script>
     <script src="/scripts/weakmap.js"></script>
+
+    <!-- build:js /scripts/vex.min.js -->
+    <script src="/scripts/vex.js"></script>
+    <script src="/scripts/vex.dialog.js"></script>
+    <!-- endbuild -->
 
     <!-- build:js /scripts/gss.min.js -->
     <script src="/bower_components/webathena/dist/gss.js"></script>
