(Failing) tests for reflow.

--- a/test/index.html
+++ b/test/index.html
@@ -49,10 +49,12 @@
     <script src="/scripts-src/colors.js"></script>
     <script src="/scripts-src/ztext.js"></script>
     <script src="/scripts-src/messageview.js"></script>
+    <script src="/scripts-src/reflow.js"></script>
     <!-- endbuild -->
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
+    <script src="spec/reflow.js"></script>
 
     <script>mocha.run()</script>
 </body>
