Use fastclick with click events. Fixes #88.
This fixes the problem where tapping on a button and scrolling would
trigger it when you released, so rapid scrolling would cause clicking on
everything.

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <script src="/scripts/mousetrap-pause.min.js"></script>
     <script src="/scripts/typeahead.jquery.min.js"></script>
     <script src="/scripts/weakmap.js"></script>
+    <script src="/scripts/fastclick.js"></script>
 
     <!-- build:js /scripts/vex.min.js -->
     <script src="/scripts/vex.js"></script>
