Remove broken <script>s from the test runner.

--- a/test/index.html
+++ b/test/index.html
@@ -21,19 +21,14 @@
     <script src="/bower_components/winchan/winchan.js"></script>
     <!-- endbuild -->
 
-    <script src="/scripts/cryptojs-des.js"></script>
     <script src="/scripts/sjcl.js"></script>
-
     <script src="/scripts/webathena.js"></script>
-    <!-- build:js /scripts/gss.min.js -->
-    <script src="/bower_components/webathena/web_scripts/js/gss.js"></script>
-    <!-- endbuild -->
+    <script src="/scripts/underscore.js"></script>
+    <script src="/scripts/backbone.js"></script>
 
     <!-- build:js /scripts/roost.min.js -->
     <script src="/scripts-src/init.js"></script>
     <script src="/scripts-src/config.js"></script>
-    <script src="/scripts-src/sidetable.js"></script>
-    <script src="/scripts-src/MutationObserver.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
     <script src="/scripts-src/timespan.js"></script>
