Start of dedicated settings window.

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,6 @@
 
     <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/vex/vex.css">
-    <link rel="stylesheet" href="/styles/vex/vex-theme-top.css">
 
     <link rel="SHORTCUT ICON" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/img/roost-logo_57x57.png">
@@ -43,11 +41,6 @@
     <script src="/scripts/weakmap.js"></script>
     <script src="/scripts/fastclick.js"></script>
 
-    <!-- build:js /scripts/vex.min.js -->
-    <script src="/scripts/vex.js"></script>
-    <script src="/scripts/vex.dialog.js"></script>
-    <!-- endbuild -->
-
     <!-- build:js /scripts/gss.min.js -->
     <script src="/bower_components/webathena/dist/gss.js"></script>
     <!-- endbuild -->
@@ -75,6 +68,7 @@
     <script src="/scripts-src/helpers.js"></script>
     <script src="/scripts-src/colors.js"></script>
     <script src="/scripts-src/templates.js"></script>
+
     <script src="/scripts-src/LoginView.js"></script>
     <script src="/scripts-src/MessagePane.js"></script>
     <script src="/scripts-src/MessagePaneView.js"></script>
@@ -82,15 +76,27 @@
     <script src="/scripts-src/ComposeBar.js"></script>
     <script src="/scripts-src/FilterBar.js"></script>
     <script src="/scripts-src/SettingsPanel.js"></script>
+    <script src="/scripts-src/GeneralSettingsView.js"></script>
+    <script src="/scripts-src/HotkeySettingsView.js"></script>
+    <script src="/scripts-src/SubscriptionSettingsView.js"></script>
+    <script src="/scripts-src/ZSigSettingsView.js"></script>
+    <script src="/scripts-src/HelpView.js"></script>
+    <script src="/scripts-src/NavBar.js"></script>
+
     <script src="/scripts-src/SubscriptionModel.js"></script>
+    <script src="/scripts-src/UserInfoModel.js"></script>
+    <script src="/scripts-src/UserSettingsModel.js"></script>
+    <script src="/scripts-src/UIStateModel.js"></script>
     <script src="/scripts-src/MessageModel.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
+    <script src="/scripts-src/RoostSession.js"></script>
+
     <script src="/scripts-src/MessagePaneController.js"></script>
     <script src="/scripts-src/ComposeController.js"></script>
     <script src="/scripts-src/AuthenticationController.js"></script>
     <script src="/scripts-src/SubscriptionController.js"></script>
-    <script src="/scripts-src/NavBar.js"></script>
-    <script src="/scripts-src/RoostSession.js"></script>
+    <script src="/scripts-src/SettingsController.js"></script>
+
     <script src="/scripts-src/endpoint.js"></script>
     <!-- endbuild -->
 
