Rework mobile tap detection.
Now we only use hammer.js on iOS, where we can't use click events due to
the 300ms delay inherent in Safari (it waits for a double-tap, and this
can't be disabled). Everywhere else, we use click events. Fixes #88,
hopefully for real this time.

(There is some latency on Android tablets, but I'm not sure how much of
that is an event delay and how much is just lag. Either way, it
still *works*.)

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,8 @@
     <script src="/scripts/mousetrap-pause.min.js"></script>
     <script src="/scripts/typeahead.jquery.min.js"></script>
     <script src="/scripts/weakmap.js"></script>
-    <script src="/scripts/fastclick.js"></script>
+    <script src="/scripts/hammer.js"></script>
+    <script src="/scripts/jquery.hammer.js"></script>
 
     <!-- build:js /scripts/vex.min.js -->
     <script src="/scripts/vex.js"></script>
@@ -68,6 +69,7 @@
     <script src="/scripts-src/api.js"></script>
     <script src="/scripts-src/model.js"></script>
     <script src="/scripts-src/ztext.js"></script>
+    <script src="/scripts-src/tapClick.js"></script>
     <!-- endbuild -->
 
     <!-- build:js /scripts/app.min.js -->
